build for sbt 1.0, dynamic versions